--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -1,4 +1,18 @@
-﻿<div id="carouselExampleInterval" class="carousel slide mt-4" data-bs-ride="carousel" style="width: 94%; min-height:300px; border-radius:5px; margin: 0 3%;">
+﻿<div class="Image_Gallery">
+    <div class="box">
+        <span style="--i:1"><img src="~/image/history-game-1.jpg" /></span>
+        <span style="--i:2"><img src="~/image/history-game-1.jpg" /></span>
+        <span style="--i:3"><img src="~/image/history-game-1.jpg" /></span>
+        <span style="--i:4"><img src="~/image/history-game-1.jpg" /></span>
+        <span style="--i:5"><img src="~/image/history-game-1.jpg" /></span>
+        <span style="--i:6"><img src="~/image/history-game-1.jpg" /></span>
+        <span style="--i:7"><img src="~/image/history-game-1.jpg" /></span>
+        <span style="--i:8"><img src="~/image/history-game-1.jpg" /></span>
+    </div>
+</div>
+
+
+<div id="carouselExampleInterval" class="carousel slide mt-4" data-bs-ride="carousel" style="width: 94%; min-height:300px; border-radius:5px; margin: 0 3%;">
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="3000" style="width: 100%; height:350px;border-radius:5px;">
             <img src="./Image/game.jpg" class="d-block w-100" alt="..." style="width: 100%; height:350px;border-radius:5px;">
@@ -108,7 +122,47 @@
     </div>
 </div>
 
+<div class="gamefree row">
+    <div class="row">
+        <div class="col-9 col-sm-9 col-md-9 free-games-section">
+            <i class="fa-solid fa-gift"></i>
+            <span>Featured Discounts</span>
+        </div>
+        <div class="col-3 col-sm-3 col-md-3 view-more-section">
+            <button class="view-more-button">
+                <a href="">View More</a>
+            </button>
+        </div>
+    </div>
 
+    <div class="row" style="justify-content:space-around;">
+        <div class="col-12 col-sm-12 col-md-3 card_other mt-4">
+            <img src="~/Image/game.jpg" />
+            <div class="info_other">
+                <h1>Heading 2</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+            </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-3 card_other mt-4">
+            <img src="~/Image/game.jpg" />
+            <div class="info_other">
+                <h1>Heading 2</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+            </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-3 card_other mt-4">
+            <img src="~/Image/game.jpg" />
+            <div class="info_other">
+                <h1>Heading 2</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+            </div>
+        </div>
+    </div>
+    <p>Discounts Now - Dec 10</p>
+</div>
 <div class="ortherproduct">
     <section class="header_section">
         <h1>Orther Product</h1>
@@ -344,7 +398,146 @@
         </div>
     </section>
 </div>
- 
+<div class="best-seller_most-player_top-upcoming-wishlisted row mt-5">
+    <div class="col-12 col-sm-12 col-md-4" style="border-right:1px solid black;border-left:1px solid black;">
+        <h2>
+            <a href="" style="text-decoration:none;color:black;">Top Sellers <i class="fa-solid fa-angle-right"></i></a>
+        </h2>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid"/>
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+         <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid"/>
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+         <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid"/>
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+         <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid"/>
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        
+    </div>
+    <div class="col-12 col-sm-12 col-md-4" style="border-right:1px solid black;border-left:1px solid black;">
+        <h2>
+            <a href="" style="text-decoration:none;color:black;">Most Played<i class="fa-solid fa-angle-right"></i></a>
+        </h2>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+
+    </div>
+    <div class="col-12 col-sm-12 col-md-4" style="border-right:1px solid black;border-left:1px solid black;">
+        <h2>
+            <a href="" style="text-decoration:none;color:black;">Top Upcoming Wishlisted <i class="fa-solid fa-angle-right"></i></a>
+        </h2>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 col-sm-4 col-md-4">
+                <img src="~/image/game.jpg" class="img-fluid" />
+            </div>
+            <div class="col-8 col-sm-8 col-md-8">
+                Game ne
+            </div>
+        </div>
+
+    </div>
+</div>
 
 
 <!-- Nút Scroll to Top -->
