--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -45,10 +45,13 @@
     </div>
 
     <!-- Bảng thông tin -->
-    <div class="text-end m-2">
-        <a id="deleteButton" class="text-danger" data-toggle="modal" data-target="#deleteProductModal" href="" style="display:none">
-            <i class="fas fa-trash"></i>
-        </a>
+    <div id="checkBoxBar" style="display:none">
+        <div class="text-end m-2">
+            @* <button class="btn btn-success mx-2 w-100">Public All</button> *@
+            <a class="text-danger mx-2" href="" data-toggle="modal" data-target="#deleteProductModal">
+                <i class="fas fa-trash"></i>
+            </a>
+        </div>
     </div>
     <table class="table table-bordered table-hover align-middle">
         <thead class="table-light">
