--- a/Project/Client/Views/User/Login.cshtml
+++ b/Project/Client/Views/User/Login.cshtml
@@ -1,12 +1,8 @@
 ﻿@{
     Layout = null;
 }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+@using Client.Models.AuthenModel
+@model LoginRequestModel
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -126,26 +122,24 @@
             padding-bottom: 10px;
         }
     </style>
-</head>
-<body>
     <div class="login-container">
         <div class="login-box">
             <div class="login-logo">
                 <a asp-controller="Home" asp-action="Index"><img src="~/image/logo.png" alt="Logo" /></a>
             </div>
             <h2 class="login-title">Log in</h2>
-            <form>
+            <form asp-action="Login">
                 <div class="login-input input-group">
                     <span class="input-group-text">
                         <i class="bi bi-person"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="Username" required>
+                    <input asp-for="UsernameOrEmail" type="text" class="form-control" placeholder="Username" required>
                 </div>
                 <div class="login-input input-group">
                     <span class="input-group-text">
                         <i class="bi bi-lock"></i>
                     </span>
-                    <input type="password" class="form-control" placeholder="Password" required>
+                    <input asp-for="Password" type="password" class="form-control" placeholder="Password" required>
                 </div>
                 <div class="d-flex justify-content-between mb-3">
                     <div class="form-check">
@@ -158,7 +152,7 @@
                         <a asp-controller="User" asp-action="ForgotPassword">Forgot Password?</a>
                     </div>
                 </div>
-                <button type="submit" class="login-btn fw-bold">Login</button>
+                <button type="submit" asp-action="Login" class="login-btn fw-bold">Login</button>
             </form>
 
             <div class="white-background mt-2">
@@ -176,5 +170,3 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
