update fix layout admin and upload file

--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -372,7 +372,7 @@
                                     </p>
                                 </div>
                                 <div>
-                                    <input type="file" id="fileInput" class="d-none" accept=".png, .jpg, .jpeg, .pdf" onchange="displayFileInfo()" />
+                                    <input type="file" id="fileInput" class="d-none" accept=".rar, .zip" onchange="displayFileInfo()" />
                                     <button type="button" class="btn btn-danger" onclick="document.getElementById('fileInput').click()">Upload</button>
                                 </div>
                                 <span class="m-2">File size limit: 1 GB</span>
