--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -13,8 +13,35 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+
 </head>
 <body style="background-color: #E0F2F1;">
+	<!-- Navbar -->
+	<nav class="navbaradmin navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+				<form class="d-flex">
+					<input class="form-control me-2" type="search" placeholder="Search.." aria-label="Search">
+				</form>
+				<ul class="navbar-nav">
+					<li class="nav-item mx-2">
+						<a class="nav-link" href="#"><i class="fa-solid fa-bell"></i></a>
+					</li>
+					<li class="nav-item mx-2">
+						<a class="nav-link" href="#"><i class="fa-solid fa-bars"></i></a>
+					</li>
+					<li class="nav-item mx-2">
+						<a class="nav-link" asp-controller="User" asp-action="Information"><img src="~/Image/avatar.jpeg" alt="Profile" class="rounded-circle" width="30"></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<!-- Sidebar -->
 	<div class="d-flex">
 		<div id="sidebar" class="sidebar d-flex flex-column p-3" style="width: 250px">
 			<h3 class="text-success p-3">G4T ADMIN DASHBOARD</h3>
