--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿<div class="Image_Gallery">
     <div class="box">
-        <span style="--i:1"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:2"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:3"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:4"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:5"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:6"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:7"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:8"><img src="~/image/history-game-1.jpg" /></span>
+        <span style="--i:1"><img src="~/image/game.jpg" /></span>
+        <span style="--i:2"><img src="~/image/g4t.png" /></span>
+        <span style="--i:3"><img src="~/image/g4t1.png" /></span>
+        <span style="--i:4"><img src="~/image/bia.jpg" /></span>
+        <span style="--i:5"><img src="~/image/game.jpg" /></span>
+        <span style="--i:6"><img src="~/image/game.jpg" /></span>
+        <span style="--i:7"><img src="~/image/game.jpg" /></span>
+        <span style="--i:8"><<img src="~/image/game.jpg" /></span>
     </div>
 </div>
 
