update admin and bua xua

--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -15,9 +15,9 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
 
 </head>
-<body style="background-color: #E0F2F1;">
+<body style="background-color: #F8F8F8;">
 	<!-- Navbar -->
-	<nav class="navbaradmin navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbaradmin navbar navbar-expand-lg navbar-light bg-white">
 		<div class="container-fluid">
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
