update config, fix show username login

--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -1,11 +1,7 @@
-﻿@model Client.Controllers.UserController
-@{
-    if (ViewData["Login"] != null)
-    {
-        <h1>Hello, @(ViewData["Login"])</h1>
-    }
+﻿@if (ViewData["Login"] != null)
+{
+    <p>Welcome, @ViewData["Login"]</p>
 }
-
 <div class="Image_Gallery">
     <div class="box">
         <span style="--i:1"><img src="~/image/history-game-1.jpg" /></span>
@@ -137,9 +133,9 @@
             <span>Featured Discounts</span>
         </div>
         <div class="col-3 col-sm-3 col-md-3 view-more-section">
-            <button class="view-more-button">
-                <a  href="">View More</a>
-            </button>
+            <a class="view-more-button">
+                View More
+            </a>
         </div>
     </div>
 
