--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
                                     <li><a class="navelement" asp-controller="product" asp-action="Collection">Collection</a></li>
                                     <li><a class="navelement" asp-controller="Admin" asp-action="AdminDashboard">AdminDashboard</a></li>
                                     <li><a class="navelement" asp-controller="User" asp-action="EditProfile">EditProfile</a></li>
+                                    <li><a class="navelement" asp-controller="User" asp-action="UsersIndex">ListUser</a></li>
                                 </ul>
                             </li>
                         </ul>
