--- a/Project/Client/Views/User/Information.cshtml.css
+++ b/Project/Client/Views/User/Information.cshtml.css
@@ -1,6 +1,6 @@
 ﻿.form-control {
     background-color: rgba(255, 255, 255, 0.9); /* Màu nền trắng nhẹ */
-    border: 1px solid #90EE90; /* Xanh lá nhạt */
+    /*border: 1px solid #90EE90;*/ /* Xanh lá nhạt */
 }
 
     .form-control:focus {
